--- a/utility/empty_type.erb
+++ b/utility/empty_type.erb
@@ -5,9 +5,8 @@ module Telegram
     module Types
       ## Just for classes consistency
       # rubocop:disable Naming/ConstantName
-      MaybeInaccessibleMessage = (
-        Message |
-        InaccessibleMessage
+      <%= name %> = (
+        <%= attributes %>
       )
       # rubocop:enable Naming/ConstantName
     end
